<resources>
    <string name="app_name">Mochila y Brujula</string>
    <string name="agregar_un_nuevo_destino">Agregar un Nuevo Destino</string>
    <string name="seleccionar_imagen">Seleccionar Imagen de Galería</string>
    <string name="nombre_del_destino">Nombre del Destino</string>
    <string name="seleccione_pais">Seleccione el País:</string>
    <string name="precio_usd">Precio $ USD</string>
    <string name="descripcion_destino">Descripción (Mínimo 20 caracteres)</string>
    <string name="guardar_destino">Guardar Destino</string>
    <string name="presiona_para_agregar">No hay destinos registrados aún\nPara agregar uno nuevo, presiona \'+\'</string>
    <string name="agregar_destino">Agregar Destino</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="agencia_de_viajes">Agencia de Viajes</string>
    <string name="inicia_sesion">Inicia sesión para continuar</string>
    <string name="correo">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="button_iniciar_sesion">Iniciar Sesión</string>
    <string name="no_tienes_cuenta_aun">¿No tienes cuenta? Regístrate aquí</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="registrate">Regístrate para conocer nuestros destinos</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrasena_minimo_6">Contraseña (mín 6 caracteres)</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="registrarse_button">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="lista_nombre_destino">Nombre del Destino</string>
    <string name="precio_inicial_0">$0.00</string>
    <string name="pais">País</string>
    <string name="lista_descripcion_destino">Descripción destino turístico</string>
    <string name="button_editar">Editar</string>
    <string name="button_eliminar">Eliminar</string>

    <string name="editar_destino">Editar Destino</string>
    <string name="actualizar_destino_activity_kt">Actualizar Destino</string>
    <string name="nombre_destino_activity_kt">Ingrese el nombre del destino</string>
    <string name="ingrese_precio_destinoactivity_kt">Ingrese un precio</string>
    <string name="validar_precio_mayor_0">El precio debe ser un número mayor a 0</string>
    <string name="debe_seleccionar_imagen">Debe seleccionar una imagen para el destino</string>
    <string name="error_al_guardar_imagen">Error al guardar la imagen</string>
    <string name="destino_guardado_exito">El Destino se guardó exitosamente</string>
    <string name="error_al_guardar">Error al guardar el registro: %1$s</string>

    <string name="seguro_eliminar">¿Estás seguro de que deseas eliminar el registro \'%1$s\'?</string>
    <string name="titulo_confirmar_eliminacion">Confirmar eliminación</string>
    <string name="mensaje_destino_eliminado">Registro del Destino eliminado</string>
    <string name="boton_para_cancelar">Cancelar</string>
    <string name="button_cerrar_sesion">Cerrar Sesión</string>
    <string name="confirmar_cerrar_sesion">¿Estás seguro que deseas salir de tu cuenta?</string>
    <string name="si_confirma_salir">Sí, salir</string>
    <string name="button_cancelar_cierre_sesion">Cancelar</string>
    <string name="button_eliminar_main_kt">Eliminar</string>
    <string name="login_ingrese_correo_kt">Ingrese su correo electrónico</string>
    <string name="login_ingrese_contrasena_kt">Ingrese su contraseña</string>
    <string name="login_saludo_bienvenido_kt">Bienvenido/a</string>
    <string name="login_error_login_kt">Error en el inicio de sesión</string>
    <string name="mainactivity_error_cargar_kt">Error al cargar: %1$s</string>
    <string name="register_correo_kt">Ingrese su correo electrónico</string>
    <string name="register_ingrese_contrasena_kt">Ingrese su contraseña</string>
    <string name="register_longitud_contrasena_kt">La contraseña debe tener al menos 6 caracteres</string>
    <string name="register_aviso_contra_no_coinciden_tk">Las contraseñas no coinciden</string>
    <string name="register_registro_exitoso_kt">Registro exitoso</string>
    <string name="register_error_en_registro_kt">Error en el registro</string>


    <string-array name="paises_array">
        <item>Alemania</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Brasil</item>
        <item>Canadá</item>
        <item>Costa Rica</item>
        <item>El Salvador</item>
        <item>España</item>
        <item>Estados Unidos</item>
        <item>Guatemala</item>
        <item>Honduras</item>
        <item>México</item>
        <item>Panamá</item>
    </string-array>
</resources>