<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicia_sesion"
            android:textSize="16sp"
            android:layout_marginBottom="28dp"/>
        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:layout_marginBottom="24dp"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_iniciar_sesion"
            android:padding="12dp"/>

        <TextView
            android:id="@+id/tvIrARegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tienes_cuenta_aun"
            android:textColor="@android:color/holo_blue_dark"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>